tests/ui/privacy/inaccessible-fields-pattern-matching-issue-760771.stderr
error: pattern requires `..` due to inaccessible fields
  --> $DIR/inaccessible-fields-pattern-matching-issue-760771.rs:13:9
   |
LL |     let foo::Foo {} = foo::Foo::default();
   |         ^^^^^^^^^^^
   |
help: ignore the inaccessible and unused fields
   |
LL |     let foo::Foo { .. } = foo::Foo::default();
   |                    ++

error: pattern requires `..` due to inaccessible fields
  --> $DIR/inaccessible-fields-pattern-matching-issue-760771.rs:16:9
   |
LL |     let foo::Bar { visible } = foo::Bar::default();
   |         ^^^^^^^^^^^^^^^^^^^^
   |
help: ignore the inaccessible and unused fields
   |
LL |     let foo::Bar { visible, .. } = foo::Bar::default();
   |                           ++++

error: aborting due to 2 previous errors

